# robot_sim_6dof_arm_mobile_platform

./: 6dof_robotic_arm.html  6dof_robotic_arm.ino  README.md  new.ino
6dof_robotic_arm/: 6dof_robotic_arm.ino
arm_test/: arm_test.ino
motor_test/: motor_test.ino
ros2_ws/src/robot_autonomy/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/robot_autonomy/config/: slam_toolbox_params.yaml
ros2_ws/src/robot_autonomy/launch/: fake_laser_scan.launch.py  slam_fake_laser.launch.py
ros2_ws/src/robot_autonomy/robot_autonomy/: fake_laser_scan_publisher.py
ros2_ws/src/robot_autonomy/rviz/: fake_laser_scan.rviz  slam_fake_laser.rviz
test_elbow_pin5/: test_elbow_pin5.ino
